web storm trial
Everything works when done in web storm

--- a/Week2/Assess-intro-css/style.css
+++ b/Week2/Assess-intro-css/style.css
@@ -16,7 +16,7 @@ h1, h2 {
 p {
 	color: #665544;
 	}
-	
+/*Not sure if #container is correct or "p em" is */	
 #container strong {
 	color: green;
 	}
