--- a/Week3/Monroe-Danielle-final-project3/css/main.css
+++ b/Week3/Monroe-Danielle-final-project3/css/main.css
@@ -12,6 +12,10 @@ body{
 div{
 	display: in-line;
 	margin-right: 30px;
+	float: right;
+	clear: both;
+	margin 10%;
+	
 	}
 	
 h1#top{
@@ -26,87 +30,40 @@ h1#top{
 	
 	}
 	
-div#transport1{
-	font-family: Palatino, Optima, Times New Roman;
-	color: rgba(255, 173, 25, 1);
-	width: 80%;
-	height: 30%;
-	
 
-h2.lamborghini{
+h2#lamborghini{
 	
 	font-style: small caps;
-	text-align: right;
+	text-align: left;
 	padding: 10px 7px;
 	border: 1px 10px, dotted;
 	margin: 20px 2px 2px 2px;
+	
 }
 	
-p.lamborghini{
+p#lamborghini-info{
 	font-family: Athelas, Optima, Marion;
 	line-height: 125%;
 	color:rgba(163, 106, 0, 1);
-	background-color: rgba(26, 26, 26, 1);
 	text-align: right;
-	width:90%px;
-	text-align: right;
-	padding: 5px;
-	margin: 2px;
-	float: right;
-	}
-
-img.lamborghini{
-
-	
-	
-h2.audi{
-	font-family: Trajan Pro, Optima, Hoefler;
-	font-style: small caps;
-	color: rgba(0, 161, 255, 1);
-	text-align: left;
-	width: 940px;
-	border: 10px 7px, dotted;
-	background-color: rgba(63, 66, 62, 0.8);
-	border-radius: .4;
-	padding: 10px 7px;
-	margin: 20px 2px 2px 2px;
-	}
-
-	
-p.audi{
-	font-family: Athelas, Optima, Marion;
-	line-height: 125%;
-	color:rgba(0, 90, 143, 1);
-	background-color: rgba(26, 26, 26, 1);
-	width: 940px;
+	width:30%px;
 	text-align: left;
 	padding: 5px;
 	margin: 2px;
+	float: left;
+	text
 	}
+
+
+
 	
-h2.ford{
-	font-family: Lithos Pro, Verdana, Adobe Song std;
-	font-style: small caps;
-	color: rgba(110, 236, 60, 1);
-	text-align: center;
-	width: 940px;
-	border: 12px 10px, round;
-	background-color: rgba(63, 66, 62, 0.8);
-	padding: 1px 7px;
-	margin: 20px 2px 2px 2px;
-	}
 	
-p.ford{
-	font-family: Athelas, Optima, Marion;
-	line-height: 125%;
-	text-align: center;
-	color:rgba(54, 153, 15, 1);
-	width: 940px;
-	background-color:rgba(26, 26, 26, 1);
-	padding: 5px;
-	margin: 2px;
-	}
+
+
 	
+
+	
+
 	/* Not sure how to get a shadow behind an image */
 imgimages/lamborghini.jpg{
 	box-shadow: 4px 3px 4px rgba(163, 106, 0, 1);
