--- a/Week3/Monroe-Danielle-final-project3/css/main.css
+++ b/Week3/Monroe-Danielle-final-project3/css/main.css
@@ -1,75 +1,94 @@
 
 /* background mark-up */
+/* Not sure why images will not link to page */
 body{
-	width: 900px;
+	width: 95%;
 	margin: 0, auto;
-	background-color: #949494;
-	
-
+	background: #949494;
+	background-image: url("images/presence.png");
+	background-position: 50%;
+	background-repeat: repeat ;
 	}
-	
-/* attempted to change the default display but was unsuccessful */
-div{
-	display: in-line;
-	margin-right: 30px;
-	float: right;
-	clear: both;
-	margin 10%;
-	
-	}
-p#start{ 
-	background-images: url("images/presence.png");
+/* paragraph with gradient background */	
+p#start{
 	background-repeat: repeat-x;
+	background: linear-gradient(#5EA5A3, #147A77);
 	font-weight: bold;
-
+	}
+	
+div#cars{
+	float: left;
+	width: 500px;
+	height: 70%;
+	border: 10px solid;
+	margin: 20px;
+	padding: 20px;
+	background-color: #67D3D0;
+	}
+	
+	
+p{ 
+	font-family: san-serif, times, verdana;
+	line-height: 125%;
+	width: 70%;
+	height: 20%;
+	color: #C8CACC;
+	background-color: rgba( 63, 66, 62, 0.8);
+	text-align: left;
+	padding: 20px;
+	margin: 20px;
 	}
 	
 h1#top{
 	font-family: San-Serif, Times, Verdana;
 	font-style: bold;
-	color: rgb(0,224,255);
+	font-size: 200%;
+	color: #22EFE9;
 	text-align: center;
-	
+	background-color:#3b3b3b;
 	margin: 3px;
 	border-style: groove;
+	border-width: 4px
 	box-shadow: -7px 7px 9px 8px hsla(11, 5%, 18%, 1);
-	
 	}
 	
 
-h2#lamborghini-head{
-	
+h2.lamborghini{
+	font-family: Verdana, Optima, Times New Roman;
 	font-style: small caps;
-	text-align: left;
-	padding: 10px 7px;
-	border: 1px 10px, dotted;
-	margin: 20px 2px 2px 2px;
-	
-}
-	
-p#lamborghini-info{
-	font-family: San-Serif, Times, Verdana;
-	line-height: 125%;
-	color:rgba(163, 106, 0, 1);
+	color: rgba(255, 173, 25, 1);
 	text-align: right;
-	padding: 5px;
-	margin: 2px;
+	width: 940px;
+	padding: 10px 7px;
+	border: 10px, dotted rgba(245, 176, 75, 1) ;
+	margin: 20px 2px 2px 2px;
+}
+
+/* took out "clear both" to get gallery to float next to car text */
+ul#gallery{
+	float:left;
+	background-color: #088480; 
+	background-image: url(images/photo.png);
+	background-repeat: no-repeat;
+	background-position: fixed top left;
+	padding: 20px;
+	margin: 20px;
+	width: 30%;
+	height: 70%;
+	border: 10px solid #5ED3D0;
 	}
+/* attempted to give a bottom border under the cars */
+li#car1, #car2, #car3{
+	padding: 10px 1px;
+	border: 0px 0px 10px 0px solid;
+	}
+
 	
-.lamborghini{
+ol#nav{
 	float: left;
-	margin: 15px;
+	clear: both;
+	margin: 20px;
+	width 10%;
+	height: 20%;
+	text-align: left;
 	}
-
-
-	
-h3#gallery{
-	background-image: href("images/photo.png");
-	background-image: fixed;
-	}
-
-
-	
-
-	
-
